Amend a minimum width on quote blocks to avoid a nasty looking squish

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -57,7 +57,7 @@
       background-color: rgb(218, 218, 218);
       margin: 5px 15px 20px;
       display:flex;
-
+      min-width: 180px;
   }
 
   .rst-content blockquote p {
